[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Shop/Skins/012.png" type="Texture" id=1]
[ext_resource path="res://UI/Images/IconButton_Small_Blank_Square.png" type="Texture" id=2]
[ext_resource path="res://UI/Shop/SkinItem.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Oswald/Oswald-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Images/ButtonText_Large_Orange_Round.png" type="Texture" id=5]
[ext_resource path="res://UI/Images/Icons/Icon_Film.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 4 )

[node name="SkinItem" type="Control"]
margin_right = 225.0
margin_bottom = 350.0
rect_min_size = Vector2( 325, 450 )
mouse_filter = 1
script = ExtResource( 3 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 22
patch_margin_top = 49
patch_margin_right = 26
patch_margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_right = 325.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="SkinPreview" type="TextureRect" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 325.0
margin_bottom = 319.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VSplitContainer2" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 323.0
margin_right = 325.0
margin_bottom = 338.0
rect_min_size = Vector2( 0, 15 )

[node name="TextureButton" type="Button" parent="VBoxContainer"]
margin_left = 31.0
margin_top = 342.0
margin_right = 293.5
margin_bottom = 417.0
rect_min_size = Vector2( 262.5, 75 )
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 4
icon = ExtResource( 5 )
flat = true
icon_align = 1
expand_icon = true

[node name="Price" type="Label" parent="VBoxContainer/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.25
margin_top = -37.5
margin_right = 131.25
margin_bottom = 37.5
custom_fonts/font = SubResource( 1 )
text = "999999"
align = 1
valign = 1
uppercase = true

[node name="Adv" type="TextureRect" parent="VBoxContainer/TextureButton"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 6 )
expand = true

[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
